--- a/include/credentials.h.sample
+++ b/include/credentials.h.sample
@@ -3,12 +3,12 @@
 #define WIFI_PASSWORD ""
 
 // mqtt broker
-#define MQTT_HOST IPAddress(192, 168, 2, 14)
-// #define MQTT_HOST IPAddress(192, 168, 2, 227)
+#define MQTT_HOST "broker.hivemq.com"
 #define MQTT_USER ""
 #define MQTT_PASSWORD ""
 #define MQTT_PORT 1883
 
 // homie convention
-#define HOMIE_BASE "healthy-indoors"
-#define HOMIE_SUB "healthy-indoors/+/+/+/set"
+#define HOMIE_BASE "healthy-indoors-project"
+#define HOMIE_SUB "healthy-indoors-project/+/+/+/set"
+#define HOMIE_INTERVAL 60 // device data update rate (nodes can update more often)
