--- a/include/credentials.h.sample
+++ b/include/credentials.h.sample
@@ -1,3 +1,5 @@
+// rename to credentials.h
+
 // Replace with your network credentials of your router and mqtt broker
 #define WIFI_SSID ""
 #define WIFI_PASSWORD ""
